--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "state-emitter",
+  "name": "stateemitter",
   "version": "1.0.2",
   "description": "Control application state with events",
   "scripts": {
